data/all_generated_tests/raw_wast_tests/br_if_MismanagementofBlockNesting_1629.wast
;; 10. **Test 10**: - **Description**: Conditional branch (`if`) structure nested within a `loop`, with `br_if` targeting the loop start, executed conditionally based on `if`. - **Constraint Checked**: Ensures that conditional execution within `if` does not misinterpret `br_if` target within loops.

(assert_invalid
  (module (func $test10 (block (loop (if (i32.const 1) (br_if 1 (i32.const 1))))))
  )
  "type mismatch"
)